SERVER-69861 Uninterruptible lock guard in election causes FCBIS to hang              Support for reading last vote in data_replicator_external_state

(cherry picked from commit 810d5c1f2b0f8d3767df55812c3324d6171aa107)