src/mongo/db/repl/data_replicator_external_state_mock.cpp
@@ -147,5 +147,10 @@ JournalListener* DataReplicatorExternalStateMock::getReplicationJournalListener(
     return nullptr;
 }
 
+StatusWith<LastVote> DataReplicatorExternalStateMock::loadLocalLastVoteDocument(
+    OperationContext* opCtx) const {
+    return StatusWith<LastVote>(ErrorCodes::NoMatchingDocument, "mock");
+}
+
 }  // namespace repl
 }  // namespace mongo
