src/mongo/db/repl/data_replicator_external_state_mock.h
@@ -77,6 +77,8 @@ public:
 
     Status storeLocalConfigDocument(OperationContext* opCtx, const BSONObj& config) override;
 
+    StatusWith<LastVote> loadLocalLastVoteDocument(OperationContext* opCtx) const override;
+
     JournalListener* getReplicationJournalListener() override;
 
     // Task executor.
